# Gobi-Kumarasamy-homeworks

homeworks/homework_1/hello_world/: hello
homeworks/homework_2/fortune_teller/: fortue_teller  fortune_teller.cpp
homeworks/homework_3/guessing_game/: guessing_game  guessing_game.cpp
homeworks/homework_4/no_strings_attached/: CMakeLists.txt  compile_run_bash.sh
homeworks/homework_4/no_strings_attached/examples/: CMakeLists.txt  split_strings.cpp  trim_strings.cpp
homeworks/homework_4/no_strings_attached/no_strings_attached/: CMakeLists.txt  string_split.cpp  string_split.h  string_split_test.cpp  string_trim.cpp  string_trim.h  string_trim_test.cpp
